# goit-python-hw-18

./: README.md  pyproject.toml
hw8nosql/: search_quotes.py
hw8nosql/rabbitmq-hw/: consumer.py  models_rmq.py  producer.py
